--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This project is the python solution for LeetCode problems. I hope it is helpful for people who want to learn python or preparing an interview. 
+This project is the python solution for LeetCode problems. I hope it is helpful for people who want to learn python or prepare for an interview. 
